<resources>
    <string name="app_name">KUEAT</string>
    <string name="title_like">Like</string>
    <string name="title_home">Home</string>
    <string name="title_appeal">Appeal</string>
    <string name="title_account">Account</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="id">학번</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="recommend_restaurant">맛집 추천하기</string>

    <string name="password_hint">영문,숫자 포함 8자리 이상</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>